# mend

./: Cargo.toml  README.md
src/: main.rs
src/lib/service/: mod.rs  services_cli.rs  system.rs
src/lib/service/commands/: start.rs
