[package]
name = "mend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
sysinfo = "0.25.3"
which = "4.2.5"
users = "0.11.0"
walkdir = "2.3.2"
regex = "1.6.0"
